Add missing tech stack and then some, fix formatting issues in html

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,7 @@
     "titleBar.inactiveForeground": "#e7e7e799"
   },
   "peacock.color": "262626",
-  "cSpell.words": ["Alexandre", "Cristo", "Hongmeng", "Hongmengti", "Hongmenti"]
+  "cSpell.words": ["Alexandre", "Cristo", "Hongmeng", "Hongmengti", "Hongmenti"],
+  "editor.formatOnSave": false,
+  "editor.defaultFormatter": null
 }
